@@ -8,6 +8,7 @@ PHP                                                                        NEWS
 - Fixed bug #49236 (Missing PHP_SUBST(PDO_MYSQL_SHARED_LIBADD)). (Jani)
 - Fixed bug #49144 (Import of schema from different host transmits original
   authentication details). (Dmitry)
+- Fixed bug #28038  (Sent incorrect RCPT TO commands to SMTP server) (Garrett)
 
 
 13 Aug 2009, PHP 5.2.11RC1
